--- a/guile/pre-inst-guile.in
+++ b/guile/pre-inst-guile.in
@@ -21,6 +21,7 @@
 
 
 GUILE_LOAD_PATH="@abs_top_srcdir@/guile/modules:$GUILE_LOAD_PATH"
+GUILE_LOAD_PATH="@abs_top_builddir@/guile/modules:$GUILE_LOAD_PATH"
 export GUILE_LOAD_PATH
 
 GNUTLS_GUILE_EXTENSION_DIR="@abs_top_srcdir@/guile/src"
