--- a/.gitignore
+++ b/.gitignore
@@ -110,6 +110,7 @@ doc/latex/gnutls.lof
 doc/latex/gnutls.lot
 doc/manpages/Makefile
 doc/manpages/Makefile.in
+doc/ocsp-api.texi
 doc/pgp-api.texi
 doc/printlist
 doc/reference/Makefile
@@ -441,10 +442,14 @@ src/libcfg.la
 src/libcmd-certtool.la
 src/libcmd-cli-debug.la
 src/libcmd-cli.la
+src/libcmd-ocsp.la
 src/libcmd-p11tool.la
 src/libcmd-psk.la
 src/libcmd-serv.la
 src/libcmd-srp.la
+src/ocsptool
+src/ocsptool-gaa.c
+src/ocsptool-gaa.h
 src/p11tool
 src/psktool
 src/srptool
@@ -487,6 +492,7 @@ tests/moredn
 tests/mpi
 tests/netconf-psk
 tests/nul-in-x509-names
+tests/ocsp
 tests/openpgp-auth
 tests/openpgp-auth2
 tests/openpgp-certs/Makefile
@@ -541,6 +547,8 @@ tests/slow/keygen
 tests/slow/gendh
 doc/reference/*.bak
 doc/manpages/gnutls_*.3
+doc/examples/ex-ocsp-client
+doc/examples/ex-ocsp-verify
 doc/examples/ex-client-anon
 doc/examples/ex-client-dtls
 doc/examples/ex-client-x509
