--- a/.gitignore
+++ b/.gitignore
@@ -551,9 +551,13 @@ tests/slow/keygen
 tests/slow/gendh
 doc/reference/*.bak
 doc/manpages/gnutls_*.3
+doc/manpages/gnutls-cli.1
+doc/manpages/gnutls-cli-debug.1
+doc/manpages/gnutls-serv.1
+doc/manpages/psktool.1
+doc/manpages/srptool.1
 doc/examples/ex-ocsp-client
 doc/examples/ex-ocsp-verify
-doc/manpages/gnutls-cli.1
 doc/examples/ex-client-anon
 doc/examples/ex-client-dtls
 doc/examples/ex-client-x509
