keyfile and certfile types were changed to string, to allow for PKCS #11 urls

--- a/src/cli-args.def.in
+++ b/src/cli-args.def.in
@@ -136,8 +136,7 @@ information on allowed keywords";
 
 flag = {
     name      = x509cafile;
-    arg-type  = file;
-    file-exists = yes;
+    arg-type  = string;
     descrip   = "Certificate file or PKCS #11 URL to use";
     doc      = "";
 };
@@ -176,16 +175,14 @@ flag = {
 
 flag = {
     name      = x509keyfile;
-    arg-type  = file;
-    file-exists = yes;
+    arg-type  = string;
     descrip   = "X.509 key file or PKCS #11 URL to use";
     doc      = "";
 };
 
 flag = {
     name      = x509certfile;
-    arg-type  = file;
-    file-exists = yes;
+    arg-type  = string;
     descrip   = "X.509 Certificate file or PKCS #11 URL to use";
     doc      = "";
 };
