--- a/configure.ac
+++ b/configure.ac
@@ -491,6 +491,7 @@ AC_CONFIG_FILES([
   src/serv-args.def
   src/cli-debug-args.def
   src/srptool-args.def
+  src/p11tool-args.def
   src/psk-args.def
   src/cfg/Makefile
   src/cfg/platon/Makefile
